# utopia

./: Cargo.toml  DESIGN.md  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/contexts/: mod.rs
core/src/controllers/: click.rs  mod.rs
core/src/lens/: mod.rs
core/src/math/: mod.rs
core/src/visitors/: event.rs  layout.rs  mod.rs  paint.rs
core/src/widgets/: align.rs  border.rs  controlled.rs  flex.rs  lens.rs  map_context.rs  map_primitive.rs  mod.rs  padding.rs  pod.rs  text.rs
terminal/: Cargo.toml
terminal/examples/: hello.rs
terminal/src/: lib.rs
testui_nannou/: Cargo.toml
testui_nannou/examples/: hello.rs
testui_nannou/src/: lib.rs
utopia_animations/: Cargo.toml
utopia_animations/src/: event.rs  lib.rs  model.rs
utopia_animations/src/widgets/: animated.rs  mod.rs
utopia_core/: Cargo.toml
utopia_core/src/: component.rs  interface.rs  lib.rs
utopia_core/src/controllers/: click.rs  map.rs  mod.rs  or.rs
utopia_core/src/lens/: empty.rs  field.rs  mod.rs
utopia_core/src/reactions/: mod.rs
utopia_core/src/steps/: event.rs  layout.rs  (+2 more)
utopia_decorations/: Cargo.toml
utopia_decorations/src/: lib.rs
utopia_futures/: Cargo.toml
utopia_futures/src/: controller.rs  executor.rs  lib.rs  reaction.rs  runtime.rs
utopia_image/: Cargo.toml
utopia_image/src/: context.rs  lib.rs  primitive.rs
utopia_layout/: Cargo.toml
utopia_layout/src/: lib.rs
utopia_nannou/: Cargo.toml
utopia_nannou/examples/: animation.rs  hello.rs  image.rs  layout.rs  scroll.rs  styled.rs
utopia_nannou/src/: event.rs  font.rs  interface.rs  lib.rs  primitive.rs  reaction.rs  widgets.rs
utopia_nannou/src/components/: scrollbar.rs
utopia_scroll/: Cargo.toml
utopia_scroll/src/: lib.rs  primitive.rs  widget.rs
utopia_scroll/src/widgets/: mod.rs  scrollable.rs  scrollview.rs
utopia_text/: Cargo.toml
utopia_text/src/: context.rs  lib.rs
utopia_tui/: Cargo.toml
utopia_tui/examples/: hello.rs
utopia_tui/src/: lib.rs
(+31 files in other folders)
