[package]
name = "utopia_nannou"
version = "0.1.0"
authors = ["Olivier Pinon <oliv.pinon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15"
utopia_core = { path = "../utopia_core" }
utopia_decorations = { path = "../utopia_decorations" }
utopia_image = { path = "../utopia_image" }
utopia_layout = { path = "../utopia_layout" }
utopia_text = { path = "../utopia_text" }
utopia_scroll = { path = "../utopia_scroll" }