[package]
name = "utopia_tui"
version = "0.1.0"
authors = ["Olivier Pinon <oliv.pinon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utopia_core = { path = "../utopia_core" }
utopia_decorations = { path = "../utopia_decorations" }
utopia_layout = { path = "../utopia_layout" }
utopia_text = { path = "../utopia_text" }
terminal = "0.2.1"